# vita_rss

./: .gitignore  CMakeLists.txt  background.xcf  default_feeds.opml  exports.yml
.helix/: languages.toml
cxml/: main.xml
cxml/locale/: ru.xml
src/: main.cpp  paf_sample.cpp
